--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "fillUrl"
+baseURL = "https://naughty-chandrasekhar-f2e27b.netlify.com/"
 languageCode = "en-us"
 title = "Data Bajka"
 theme = "jelo"
